--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Technical Partner Enablement</title>
   </head>
   <body>
-    <h1>Mozilla is cool</h1>
-    <img src="images/ping.png" alt="Ping Logo">
+    <h1>PingIdentity Technical Partner Enablement Demos</h1>
+    <img src="../images/ping.png" alt="Ping Logo">
 
 
     <ul> <!-- changed to list in the tutorial -->
