--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
     <ul>
       <li class="first"><a href="#" accesskey="1">Home</a></li>
       <li><a href="#" accesskey="2">About Us</a></li>
-      <li><a href="#" accesskey="3">Products</a></li>
+      <li><a href="#" accesskey="3">Solutions</a></li>
       <li><a href="#" accesskey="4">Services</a></li>
       <li><a href="#" accesskey="5">Contact Us</a></li>
     </ul>
