--- a/example.html
+++ b/example.html
@@ -23,7 +23,7 @@
   <div id="content">
     <div id="primaryContentContainer">
       <div id="primaryContent">
-        <h2>Ping Identity Technical Partner Enablment</h2>
+        <h2>Ping Identity Technical Partner Enablment Demos</h2>
         <p><strong>Ping Identity</strong> is cool as hell</p>
         <p>More Paragraphs</p>
         <h3>Admin URLs</h3>
