--- a/example.html
+++ b/example.html
@@ -32,10 +32,8 @@
           <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a></li>
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
         </ul>
-        <h3>How Cool?</h3>
-        <blockquote>
-          <p>This Cool</p>
-        </blockquote>
+        <h3>Demos</h3>
+          <p><a href="  https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a></p>
         <h3>What's new?</h3>
         <table>
           <tr>
