--- a/example.html
+++ b/example.html
@@ -33,7 +33,7 @@
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
         </ul>
         <h3>Demos</h3>
-          <p><a href="  https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a></p>
+          <p><a href="  https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
         <h3>What's new?</h3>
         <table>
           <tr>
