--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Technical Partner Enablement</title>
-  </head>
-  <body>
-    <h1>Ping Identity Technical Partner Enablement Demos</h1>
-    <img src="../images/ping.png" alt="Ping Logo">
-
-
-    <ul> <!-- changed to list in the tutorial -->
-      <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li>
-      <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a></li>
-      <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Technical Parnter Enablement Demos</title>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<link href="default.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<div id="outer">
+  <div id="header">
+    <h1><a href="#"></a></h1>
+    <h2></h2>
+  </div>
+  <div id="menu">
+    <ul>
+      <li class="first"><a href="#" accesskey="1">Home</a></li>
+      <li><a href="#" accesskey="2">About Us</a></li>
+      <li><a href="#" accesskey="3">Solutions</a></li>
+      <li><a href="#" accesskey="4">Services</a></li>
+      <li><a href="#" accesskey="5">Contact Us</a></li>
     </ul>
+  </div>
+  <div id="content">
+    <div id="primaryContentContainer">
+      <div id="primaryContent">
+        <h2>Ping Identity Technical Partner Enablment Demos</h2>
+        <p><strong>Ping Identity</strong> is cool as hell</p>
+        <p>More Paragraphs</p>
 
-    <p>This is just HTML, I'll make it pretty someday</p>
+        <h3>Demos</h3>
+          <p><a href="  https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
+       <h3>BX Demos</h3>
+       <h3>Admin URLs</h3>
+        <ul>
+          <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li>
+          <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a></li>
+          <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
+        </ul>
 
-    <p><a href="https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify Demo</a></p>
-  </body>
+      </div>
+    </div>
+    <div class="clear"></div>
+  </div>
+  <div id="footer">
+    <p>Copyright &copy; 2021 Ping Identity Designed by PTE</a></p>
+  </div>
+</div>
+</body>
 </html>
