--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div id="outer">
   <div id="header">
     <h1><a href="#"></a></h1>
     <h2></h2>
@@ -14,9 +13,7 @@
   <div id="menu">
     <ul>
       <li class="first"><a href="#" accesskey="1">Home</a></li>
-      <li><a href="#" accesskey="2">About Us</a></li>
-      <li><a href="#" accesskey="3">Solutions</a></li>
-      <li><a href="#" accesskey="4">Services</a></li>
+      <li><a href="#" accesskey="3">Partner Portal</a></li>
       <li><a href="#" accesskey="5">Contact Us</a></li>
     </ul>
   </div>
@@ -28,7 +25,7 @@
         <p>More Paragraphs</p>
 
         <h3>Demos</h3>
-          <p><a href="  https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
+          <p><a href="https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
        <h3>BX Demos</h3>
        <h3>Admin URLs</h3>
         <ul>
@@ -36,7 +33,6 @@
           <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a></li>
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
         </ul>
-
       </div>
     </div>
     <div class="clear"></div>
