--- a/index.html
+++ b/index.html
@@ -6,22 +6,11 @@
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div id="header">
-    <h1><a href="#"></a></h1>
-    <h2></h2>
-  </div>
-  <div id="menu">
-    <ul>
-      <li class="first"><a href="#" accesskey="1">Home</a></li>
-      <li><a href="#" accesskey="3">Partner Portal</a></li>
-      <li><a href="#" accesskey="5">Contact Us</a></li>
-    </ul>
-  </div>
   <div id="content">
     <div id="primaryContentContainer">
       <div id="primaryContent">
         <h2>Ping Identity Technical Partner Enablment Demos</h2>
-        <p><strong>Ping Identity</strong> is cool as hell</p>
+        <p>Something here about purpose of this page.  This page can only be used by those who know, there will never be anything private store here.</p>
         <p>More Paragraphs</p>
 
         <h3>Demos</h3>
