--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         </ul>
       </div>
     </div>
+    <div class="clear"></div>
   </div>
   <div id="footer">
-    <p>Copyright &copy; 2021 Ping Identity Designed by PTE</a></p>
+    <p>Copyright &copy; 2021 Ping Identity Designed by PTE</p>
   </div>
 </body>
 </html>
