--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <div id="menu">
     <div id="primaryContentContainer">
       <div id="primaryContent">
         <h2>Ping Identity Technical Partner Enablment Demos</h2>
