--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 
         <h3>Demos</h3>
           <p><a href="https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
-       <h3>BX Demos</h3>
        <h3>Admin URLs</h3>
         <ul>
+          <p>See the configuration for the above demos!</p>
           <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li>
           <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a></li>
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
+        <h3>BX Demos</h3>
+          <p>BX demos are premade real enviorment demos using Ping Idenity's solutions</p>
+          <p><a href="https://demo.bxfinance.org/app/">BXFinance</a> Premade real life banking demo using advanced solutions</p>
+          <p><a href="https://demo.bxretail.org/app/">BXRetail</a> Premade real life consumer demo using PingOne</p>
         </ul>
       </div>
     </div>
