--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <div id="menu">
-  </div>
     <div id="primaryContentContainer">
       <div id="primaryContent">
         <h2>Ping Identity Technical Partner Enablment Demos</h2>
@@ -25,10 +23,11 @@
         BX demos are premade real enviorment demos using Ping Idenity's solutions
           <li><a href="https://demo.bxfinance.org/app/">BXFinance</a> Premade real life banking demo using advanced solutions</p></li>
           <li><a href="https://demo.bxretail.org/app/">BXRetail</a> Premade real life consumer demo using PingOne</li>
-      </div>
     </div>
+  </div>
     <div class="clear"></div>
   <div id="footer">
     <p>Copyright &copy; 2021 Ping Identity Designed by PTE</p>
+    <div>
 </body>
 </html>
