updated main page

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
       <div id="primaryContent">
         <h2>Ping Identity Technical Partner Enablment Demos</h2>
         <p>Something here about purpose of this page.  This page can only be used by those who know, there will never be anything private store here.</p>
-        <p>
-          <p>
+        <p> 
+          <p> 
 
         <h3>Demos</h3>
           <p><a href="https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
-          <p>
-            <p>
+          <p> 
+            <p> 
         <p><h3>Admin URLs</h3></p>
           See the configuration for the above demos!
-          <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li>
-          <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a></li>
+          <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li> 
+            Login with  username: auditor
+                        password: 2FederateMore
+          <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground - Resets Daily</a></li>
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
-          <p>
-            <p>
+          <p> 
+            <p> 
          <p><h3>BX Demos</h3></p>
         BX demos are premade real enviorment demos using Ping Idenity's solutions
           <li><a href="https://demo.bxfinance.org/app/">BXFinance</a> Premade real life banking demo using advanced solutions</p></li>
