--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <p><h3>Admin URLs</h3></p>
           See the configuration for the above demos!
           <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li> 
-            Login with  username: auditor
-                        password: 2FederateMore
+            Login with  <p>username: auditor
+                        <p>password: 2FederateMore
           <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground - Resets Daily</a></li>
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
           <p> 
