--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
           <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li> 
                         <p>username: auditor
                         <p>password: 2FederateMore
-          <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground - Resets Daily</a></li>
+          <li><a href="https://tpe-pingfederate-engine.ping-devops.com/OAuthPlayground/">Oauth Playground</a> - Resets Daily</li>
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
           <p> 
-            <p> 
+        <p><h3>TPE Server Profiles</h3></p> 
+          <li><a href="https://github.com/ping-enablepartners/serverprofiles/tree/main/K8-Enviroment">Demo Enviroment</a></li>
+          <li><a href="https://github.com/ping-enablepartners/apache.git">This Page</a></li>
          <p><h3>BX Demos</h3></p>
         BX demos are premade real enviorment demos using Ping Idenity's solutions
           <li><a href="https://demo.bxfinance.org/app/">BXFinance</a> Premade real life banking demo using advanced solutions</p></li>
