--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <li><a href="https://github.com/ping-enablepartners/serverprofiles/tree/main/K8-Enviroment">Demo Enviroment</a></li>
           <li><a href="https://github.com/ping-enablepartners/apache.git">This Page</a></li>
          <p><h3>BX Demos</h3></p>
-        BX demos are premade real enviorment demos using Ping Idenity's solutions
+        BX demos are premade real enviroment demos using Ping Idenity's solutions
           <li><a href="https://demo.bxfinance.org/app/">BXFinance</a> Premade real life banking demo using advanced solutions</p></li>
           <li><a href="https://demo.bxretail.org/app/">BXRetail</a> Premade real life consumer demo using PingOne</li>
     </div>
