--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Demos</h3>
           <p><a href="https://tpe-pingfederate-engine.ping-devops.com/pf/idprofile.ping?LocalIdentityProfileID=y3tgV7gI329QzWha">PingOne Verify</a> Click on Register to start the PingOne Verify flow!</p>
           <br>
-        <p><h3>Admin URLs</h3></p>
+        <h3>Admin URLs</h3>
           See the configuration for the above demos!
           <li><a href="https://tpe-pingfederate-admin.ping-devops.com">PingFederate Admin</a></li> 
                         <p>&emsp;&emsp;&emsp;username: auditor
@@ -23,11 +23,11 @@
           <li><a href="https://tpe-pingaccess-admin.ping-devops.com">PingAccess Admin</a></li>
           <p> 
             <br>
-        <p><h3>TPE Server Profiles</h3></p> 
+        <h3>TPE Server Profiles</h3>
           <li><a href="https://github.com/ping-enablepartners/serverprofiles/tree/main/K8-Enviroment">Demo Enviroment</a></li>
           <li><a href="https://github.com/ping-enablepartners/apache.git">This Page</a></li>
           <br>
-         <p><h3>BX Demos</h3></p>
+         <h3>BX Demos</h3>
         BX demos are premade real enviroment demos using Ping Idenity's solutions
           <li><a href="https://demo.bxfinance.org/app/">BXFinance</a> Premade real life banking demo using advanced solutions</p></li>
           <li><a href="https://demo.bxretail.org/app/">BXRetail</a> Premade real life consumer demo using PingOne</li>
